--- a/0admin/seotitles.org
+++ b/0admin/seotitles.org
@@ -106,15 +106,25 @@ vr health care, xr health care, virtual reality and health, healthy living with 
    
 ** Consultation
 
+consulting, learn how to xr undertand xr, professional xr produce xr, consultation, advice, xradvise
+
+
 ** Consult Serv
    
+services for consulting, learn how to xr undertand xr, professional xr produce xr, consultation, advice, xradvise
+
 ** Industry Sol
 
-** Increase Prof
+cross industry solutions to xr, xr per industry, use xr to solve problem
+
 
 ** Source Dev
+
+source xr development, build xr development department, sourcing xr, 
    
 ** VR Instal
+
+installation in xr, virtual reality rig set up, vr arcade, xrbar, xrset up, vive vr installation
 
 ** Training
 
@@ -195,7 +205,7 @@ cloudxr, netowrked xr, cloud computing in virtual reality, virtual cloud reality
    
 ** cryptocurrency
 
-cryptocurrency in xr, bitcoinxr, icoxr, xrico, 
+cryptocurrency in xr, bitcoinxr, icoxr, xrico, w2 
    
 ** emotion recog
    
