updated seo table and deployment

--- a/PageTable.org
+++ b/PageTable.org
@@ -29,7 +29,7 @@ background
  | 2S  | Consultation         | +    | + + + + | +   | /consultation |    | -   | +   | -    |                   |       |   |   |   |
  | 2S  | Publications         | +    | + + - - | +   | /publications |    | -   | +   | -    |                   |       |   |   |   |
  | #   | SOLTUIONS            |      | +       |     |               |    | -   |     |      |                   |       |   |   |   |
- | ==  | ====PRODCUTS======   | ==   | +=      | ==  | ===           | == | ==  | === | ==   | == =========      |       |   |   |   |
+ | ==  | ====PRODCUTS======   | ==   | +       | ==  | ===           | == | ==  | === | ==   | == =========      |       |   |   |   |
  | 3P  | 1. architect         |      | +       | +   | /arch         |    |     | +   | -    | + bus stop        |       |   |   |   |
  | 3p  | 2. color             |      |         | +   | /color        |    | -   | +   | -    | +  Eyes           |       |   |   |   |
  | 3P  | 3. music             |      |         | +   | /music        |    | -   | +   | -    | -                 |       |   |   |   |
@@ -188,50 +188,47 @@ background
  |     | Activation           |      |         |     | /activation   |    | -   |     |      |                   |       |   |   |   |
  |     | Audiences            |      |         |     | /audiences    |    | -   |     |      |                   |       |   |   |   |
  |     | Productions          |      |         |     | /productions  |    | -   |     |      |                   |       |   |   |   |
- | #   | NOVA XR              |      |         |     | /novaxr       |    |     |     |      |                   |       |   |   |   |
- |     | Who We Are           |      |         |     | /whoweare     |    | -   |     |      |                   |       |   |   |   |
- |     | Partners             |      |         |     | /partners     |    | -   |     |      |                   |       |   |   |   |
- |     | Contact              |      |         |     | /contact      |    | -   |     |      |                   |       |   |   |   |
- | ==  | ===Who We Are=       |      | `       | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
+ | ==  | ===Who We Are=       |      |         | ==  | /whoweare     | == | -   | ==  | ==== |                   |       |   |   |   |
  |     | Contact              |      |         |     |               |    | -   |     |      |                   |       |   |   |   |
  |     | Contact              |      |         |     |               |    | -   |     |      |                   |       |   |   |   |
- | ==  | * Community *        | +    | ==      | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
- |     | philanthropy         |      |         |     | /philanthropy |    | -   |     |      |                   |       |   |   |   |
- |     | philosophy           |      |         |     | /philosophy   |    | -   |     |      |                   |       |   |   |   |
- |     | shouts               |      |         |     | /shouts       |    |     |     |      |                   |       |   |   |   |
- |     | redhook              |      |         |     | /redhook      |    | -   |     |      |                   |       |   |   |   |
- |     | rent                 |      |         |     | /rent         |    | -   |     |      |                   |       |   |   |   |
- |     | member               |      |         |     | /membership   |    | -   |     |      |                   |       |   |   |   |
- |     | learning lab         |      |         |     | /learninglab  |    | -   |     |      |                   |       |   |   |   |
- | ==  | ===Partnership=      | +    | ==      | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
- |     | sponsor              |      |         |     | /sponsor      |    | -   |     |      |                   |       |   |   |   |
- |     | investor             |      |         |     | /investor     |    | -   |     |      |                   |       |   |   |   |
- |     | studio               |      |         |     | /studio       |    | -   |     |      |                   |       |   |   |   |
- |     | developer            |      |         |     | /developer    |    | -   |     |      |                   |       |   |   |   |
- |     | producer             |      |         |     | /producer     |    | -   |     |      |                   |       |   |   |   |
- |     | designer             |      |         |     | /designer     |    | -   |     |      |                   |       |   |   |   |
- |     | apprentice           |      |         |     | /apprentice   |    | -   |     |      |                   |       |   |   |   |
- |     | freelance            |      |         |     | /freelance    |    | -   |     |      |                   |       |   |   |   |
- |     | volunteer            |      |         |     | /volunteer    |    | -   |     |      |                   |       |   |   |   |
+ | ==  | * Community *        | +    | +       | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
+ |     | philanthropy         |      | +       |     | /philanthropy |    | -   |     |      |                   |       |   |   |   |
+ |     | philosophy           |      | +       |     | /philosophy   |    | -   |     |      |                   |       |   |   |   |
+ |     | shouts               |      | +       |     | /shouts       |    |     |     |      |                   |       |   |   |   |
+ |     | redhook              |      | +       |     | /redhook      |    | -   |     |      |                   |       |   |   |   |
+ |     | rent                 |      | +       |     | /rent         |    | -   |     |      |                   |       |   |   |   |
+ |     | member               |      | +       |     | /membership   |    | -   |     |      |                   |       |   |   |   |
+ |     | learning lab         |      | +       |     | /learninglab  |    | -   |     |      |                   |       |   |   |   |
+ | ==  | ===Partnership=      | +    | +       | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
+ |     | sponsor              |      | +       |     | /sponsor      |    | -   |     |      |                   |       |   |   |   |
+ |     | investor             |      | +       |     | /investor     |    | -   |     |      |                   |       |   |   |   |
+ |     | studio               |      | +       |     | /studio       |    | -   |     |      |                   |       |   |   |   |
+ |     | developer            |      | +       |     | /developer    |    | -   |     |      |                   |       |   |   |   |
+ |     | producer             |      | +       |     | /producer     |    | -   |     |      |                   |       |   |   |   |
+ |     | designer             |      | +       |     | /designer     |    | -   |     |      |                   |       |   |   |   |
+ |     | apprentice           |      | +       |     | /apprentice   |    | -   |     |      |                   |       |   |   |   |
+ |     | freelance            |      | +       |     | /freelance    |    | -   |     |      |                   |       |   |   |   |
+ |     | volunteer            |      | +       |     | /volunteer    |    | -   |     |      |                   |       |   |   |   |
  |     |                      |      |         |     |               |    | -   |     |      |                   |       |   |   |   |
- | ==  | ===Contact=          | ==   | ==      | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
- | ==  | ==Novacognito==      |      |         |     | /novacognito  |    | -   |     |      |                   |       |   |   |   |
- | 3   | Future prod          | +    |         |     | /futurepro    |    | -   |     |      |                   |       |   |   |   |
- | 4   | NYE                  |      |         |     | /nye2019      |    | -   |     |      |                   |       |   |   |   |
- | 4   | mardi gras           |      |         |     | /mardigras    |    | -   |     |      |                   |       |   |   |   |
- | 4   | 4th july             |      |         |     | /4thjuly      |    | -   |     |      |                   |       |   |   |   |
- | 4   | holi                 |      |         |     | /holi         |    | -   |     |      |                   |       |   |   |   |
- | 4   | san fermin           |      |         |     | /san-fermin   |    | -   |     |      |                   |       |   |   |   |
- | 4   | oktober fest         |      |         |     | /oktoberfest  |    | -   |     |      |                   |       |   |   |   |
- | 4   | songkran             |      |         |     | /songkran     |    | -   |     |      |                   |       |   |   |   |
- | 4   | full moon            |      |         |     | /fullmoon     |    | -   |     |      |                   |       |   |   |   |
- | 2   | Find Us              |      |         |     | /findus       |    | -   |     |      |                   |       |   |   |   |
- | 1   | BLog                 | +    |         |     | /LabLive      |    | -   |     |      |                   |       |   |   |   |
- | 1   | Rent room            |      |         |     | /rentroom     |    | -   |     |      |                   |       |   |   |   |
- | 1   | Rent space           |      |         |     | /rentspace    |    | -   |     |      |                   |       |   |   |   |
- | 1   | Photoshoot           |      |         |     | /photoshoot   |    | -   |     |      |                   |       |   |   |   |
- | 1   | Creative Specs       |      |         |     | /creativespec |    | -   |     |      |                   |       |   |   |   |
- | 1   | Money                |      |         |     | /money        |    | -   |     |      |                   |       |   |   |   |
- | 1   | Team Access          |      |         |     | /teamaccess   |    | -   |     |      |                   |       |   |   |   |
- |     | Novacain             |      |         |     | /Novacain     |    | -   |     |      |                   |       |   |   |   |
+ | ==  | ===Contact=          | ==   | +       | ==  | ==========    | == | -   | ==  | ==== |                   |       |   |   |   |
+ | ==  | ==Novacognito==      |      | +       |     | /novacognito  |    | -   |     |      |                   |       |   |   |   |
+ | 3   | Future prod          | +    | +       |     | /futurepro    |    | -   |     |      |                   |       |   |   |   |
+ | 4   | NYE                  |      | +       |     | /nye2019      |    | -   |     |      |                   |       |   |   |   |
+ | 4   | mardi gras           |      | +       |     | /mardigras    |    | -   |     |      |                   |       |   |   |   |
+ | 4   | 4th july             |      | +       |     | /4thjuly      |    | -   |     |      |                   |       |   |   |   |
+ | 4   | holi                 |      | +       |     | /holi         |    | -   |     |      |                   |       |   |   |   |
+ | 4   | san fermin           |      | +       |     | /san-fermin   |    | -   |     |      |                   |       |   |   |   |
+ | 4   | oktober fest         |      | +       |     | /oktoberfest  |    | -   |     |      |                   |       |   |   |   |
+ | 4   | songkran             |      | +       |     | /songkran     |    | -   |     |      |                   |       |   |   |   |
+ | 4   | full moon            |      | +       |     | /fullmoon     |    | -   |     |      |                   |       |   |   |   |
+ | 2   | Find Us              |      | +       |     | /findus       |    | -   |     |      |                   |       |   |   |   |
+ | 1   | BLog                 | +    | +       |     | /LabLive      |    | -   |     |      |                   |       |   |   |   |
+ | 1   | Rent room            |      | +       |     | /rentroom     |    | -   |     |      |                   |       |   |   |   |
+ | 1   | Rent space           |      | +       |     | /rentspace    |    | -   |     |      |                   |       |   |   |   |
+ | 1   | Photoshoot           |      | +       |     | /photoshoot   |    | -   |     |      |                   |       |   |   |   |
+ | 1   | Creative Specs       |      | +       |     | /creativespec |    | -   |     |      |                   |       |   |   |   |
+ | 1   | Money                |      | +       |     | /money        |    | -   |     |      |                   |       |   |   |   |
+ | 1   | Team Access          |      | +       |     | /teamaccess   |    | -   |     |      |                   |       |   |   |   |
+ |     | Novacain             |      | +       |     | /Novacain     |    | -   |     |      |                   |       |   |   |   |
+ |     |                      |      |         |     |               |    |     |     |      |                   |       |   |   |   |
  
